# alarma2

./: README.md  alarma2.ino  bt.ino  cmd.ino  common.h  keypad.ino  leds.ino  mp3.ino  sonic.ino
android/app/: build.gradle
android/app/src/androidTest/java/com/madsen/peter/alarma2/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/madsen/peter/alarma2/: MainActivity.java
android/app/src/main/java/com/madsen/peter/alarma2/bt/: ArduinoCommands.java  BT.java  BTUtils.java  Connection.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/madsen/peter/alarma2/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
arduino/: arduino.ino  bt.ino  cmd.ino  common.h  game.ino  keypad.ino  leds.ino  mp3.ino  pic_i2c.ino  sonic.ino
esp32/: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig
esp32/main/: main.c
esp32/src/: bt.c  bt.h  bt_gatt_server.c  bt_rfcomm.c  bt_rfcomm.h  hcsr04.c  hcsr04.h  http_server.c  i2c.c  i2c.h  keypad.c  keypad.h  leds.c  leds.h  main.c
